fix: unreadable link in darkmode alert box

--- a/src/scss/kratosr.scss
+++ b/src/scss/kratosr.scss
@@ -658,6 +658,10 @@ table {
     flex-direction: column;
   }
 
+  a {
+    color: #1e8cdb;
+  }
+
   ul, p {
     margin: 0 1em!important;
   }
